--- a/dbd4topostgres/src/dbd4topostgres/FrameDBD4ToPostgres.form
+++ b/dbd4topostgres/src/dbd4topostgres/FrameDBD4ToPostgres.form
@@ -32,12 +32,13 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="menuFile">
           <Properties>
+            <Property name="background" type="java.awt.Color" resourceKey="menuHelp.background"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.CompoundBorderInfo">
                 <CompoundBorder>
                   <Border PropertyName="outside" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                     <LineBorder roundedCorners="true">
-                      <Property name="color" resourceKey="menuFile.border.outsideBorder.lineColor"/>
+                      <Property name="color" resourceKey="menuHelp.border.outsideBorder.lineColor"/>
                     </LineBorder>
                   </Border>
                   <Border PropertyName="inside" info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
@@ -46,15 +47,15 @@
                 </CompoundBorder>
               </Border>
             </Property>
-            <Property name="foreground" type="java.awt.Color" resourceKey="menuFile.foreground"/>
+            <Property name="foreground" type="java.awt.Color" resourceKey="menuHelp.foreground"/>
             <Property name="text" type="java.lang.String" resourceKey="menuFile.text"/>
-            <Property name="font" type="java.awt.Font" resourceKey="menuFile.font"/>
+            <Property name="font" type="java.awt.Font" resourceKey="menuHelp.font"/>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="iconTextGap" type="int" value="10"/>
             <Property name="name" type="java.lang.String" value="menuFile" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[80, 30]"/>
+              <Dimension value="[100, 30]"/>
             </Property>
           </Properties>
           <AuxValues>
@@ -126,12 +127,13 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="menuLayout">
           <Properties>
+            <Property name="background" type="java.awt.Color" resourceKey="menuHelp.background"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.CompoundBorderInfo">
                 <CompoundBorder>
                   <Border PropertyName="outside" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                     <LineBorder roundedCorners="true">
-                      <Property name="color" resourceKey="menuLayout.border.outsideBorder.lineColor"/>
+                      <Property name="color" resourceKey="menuHelp.border.outsideBorder.lineColor"/>
                     </LineBorder>
                   </Border>
                   <Border PropertyName="inside" info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
@@ -140,13 +142,15 @@
                 </CompoundBorder>
               </Border>
             </Property>
-            <Property name="foreground" type="java.awt.Color" resourceKey="menuLayout.foreground"/>
+            <Property name="foreground" type="java.awt.Color" resourceKey="menuHelp.foreground"/>
             <Property name="text" type="java.lang.String" resourceKey="menuLayout.text"/>
             <Property name="toolTipText" type="java.lang.String" resourceKey="menuLayout.toolTipText"/>
+            <Property name="font" type="java.awt.Font" resourceKey="menuHelp.font"/>
             <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="name" type="java.lang.String" value="menuLayout" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[80, 30]"/>
+              <Dimension value="[100, 30]"/>
             </Property>
           </Properties>
           <SubComponents>
@@ -554,6 +558,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="menuHelp">
           <Properties>
+            <Property name="background" type="java.awt.Color" resourceKey="menuHelp.background"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.CompoundBorderInfo">
                 <CompoundBorder>
@@ -571,12 +576,8 @@
             <Property name="foreground" type="java.awt.Color" resourceKey="menuHelp.foreground"/>
             <Property name="text" type="java.lang.String" resourceKey="menuHelp.text"/>
             <Property name="font" type="java.awt.Font" resourceKey="menuHelp.font"/>
-            <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="horizontalTextPosition" type="int" value="0"/>
-            <Property name="iconTextGap" type="int" value="10"/>
-            <Property name="name" type="java.lang.String" value="menuHelp" noResource="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[80, 30]"/>
+              <Dimension value="[100, 30]"/>
             </Property>
           </Properties>
           <AuxValues>
@@ -835,6 +836,9 @@
                   <Connection component="panelCmdsOptions" name="preferredSize" type="property"/>
                 </Property>
                 <Property name="name" type="java.lang.String" value="panelCmdsOptions" noResource="true"/>
+                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[250, 69]"/>
+                </Property>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
@@ -862,9 +866,6 @@
                     <Property name="contentAreaFilled" type="boolean" value="false"/>
                     <Property name="horizontalAlignment" type="int" value="2"/>
                     <Property name="horizontalTextPosition" type="int" value="4"/>
-                    <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                      <Insets value="[0, 0, 0, 0]"/>
-                    </Property>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 15]"/>
                     </Property>
@@ -894,9 +895,6 @@
                     <Property name="contentAreaFilled" type="boolean" value="false"/>
                     <Property name="horizontalAlignment" type="int" value="2"/>
                     <Property name="horizontalTextPosition" type="int" value="4"/>
-                    <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                      <Insets value="[0, 0, 0, 0]"/>
-                    </Property>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 15]"/>
                     </Property>
@@ -926,9 +924,6 @@
                     <Property name="contentAreaFilled" type="boolean" value="false"/>
                     <Property name="horizontalAlignment" type="int" value="2"/>
                     <Property name="horizontalTextPosition" type="int" value="4"/>
-                    <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                      <Insets value="[0, 0, 0, 0]"/>
-                    </Property>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 15]"/>
                     </Property>
@@ -994,7 +989,7 @@
                       </Properties>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="20" y="10" width="-1" height="20"/>
+                          <AbsoluteConstraints x="20" y="10" width="100" height="20"/>
                         </Constraint>
                       </Constraints>
                     </Component>
@@ -1005,7 +1000,7 @@
                       </Properties>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="80" y="10" width="150" height="20"/>
+                          <AbsoluteConstraints x="150" y="10" width="170" height="20"/>
                         </Constraint>
                       </Constraints>
                     </Component>
