--- a/branches/version_2.0/dbd4topostgres/src/dbd4topostgres/FrameDBD4ToPostgres.form
+++ b/branches/version_2.0/dbd4topostgres/src/dbd4topostgres/FrameDBD4ToPostgres.form
@@ -1143,6 +1143,7 @@
                 <Property name="font" type="java.awt.Font" resourceKey="lblTablesFromModel.font"/>
                 <Property name="foreground" type="java.awt.Color" resourceKey="lblTablesFromModel.foreground"/>
                 <Property name="text" type="java.lang.String" resourceKey="lblTablesFromModel.text"/>
+                <Property name="toolTipText" type="java.lang.String" resourceKey="lblTablesFromModel.toolTipText"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.CompoundBorderInfo">
                     <CompoundBorder>
@@ -1221,6 +1222,39 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
           <SubComponents>
+            <Container class="javax.swing.JPanel" name="panelOptionsResultScript">
+              <Properties>
+                <Property name="name" type="java.lang.String" value="panelOptionsResultScript" noResource="true"/>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+                  <BorderConstraints direction="South"/>
+                </Constraint>
+              </Constraints>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JButton" name="cmdClearResult">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" resourceKey="cmdClearResult.icon"/>
+                    <Property name="text" type="java.lang.String" resourceKey="cmdClearResult.text"/>
+                    <Property name="toolTipText" type="java.lang.String" resourceKey="cmdClearResult.toolTipText"/>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                        <EmptyBorder/>
+                      </Border>
+                    </Property>
+                    <Property name="name" type="java.lang.String" value="cmdClearResult" noResource="true"/>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[120, 36]"/>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdClearResultActionPerformed"/>
+                  </Events>
+                </Component>
+              </SubComponents>
+            </Container>
             <Container class="javax.swing.JScrollPane" name="scrollPaneScriptResult">
               <Properties>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
